--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             <nav class="b-nav">
                 <ul>
                     <li><a href="#product">Products</a></li>
-                    <li><a href="#ingridients">Ingridients</a></li>
+                    <li><a href="#ingridients">Ingredients</a></li>
                     <li><a href="#about">About us</a></li>
                     <li><a href="#buy">Where to buy</a></li>
                 </ul>
                 <ul class="nav-xs">
                     <li><a href="#promo">Home</a></li>
-                    <li><a href="#ingridients">Ingridients</a></li>
+                    <li><a href="#ingridients">Ingredients</a></li>
                     <li><a href="#buy">Where to buy</a></li>
                     <li><a href="#about">About us</a></li>
                     <li><a href="#footer">Contacts</a></li>
@@ -149,6 +149,7 @@
                                 <li><a href="">Kids  3-7 y.o.</a></li>
                                 <li><a href="">Junior  8-12 y.o.</a></li>
                                 <li><a href="">Teens  12-18 y.o.</a></li>
+                                <li><a href="">Toothbrush</a></li>
                             </ul>
                         </div>
                         <div class="b-product__item-img">
@@ -157,7 +158,7 @@
                     </div>
                 </div>
                 <div class="b-product__row-col">
-                    <div class="b-product__item">
+                    <div class="b-product__item product-item">
                         <div class="b-product__item-left">
                             <div class="b-product__item-name">Adults oral care</div>
                             <ul>
@@ -166,6 +167,8 @@
                                 <li><a href="">PRO</a></li>
                                 <li><a href="">Regular</a></li>
                                 <li><a href="">Gum care</a></li>
+                                <li><a href="">Sensitive</a></li>
+                                <li><a href="">Toothbrush</a></li>
                             </ul>
                         </div>
                         <div class="b-product__item-img">
@@ -230,7 +233,7 @@
                     <div class="b-best__item-hover">
                         <ul>
                             <li>Toothpaste</li>
-                            <li class="wh">R.O.C.S.</li>
+                            <li>R.O.C.S.</li>
                             <li>BIOCOMPLEX</li>
                             <li>Active Protection</li>
                         </ul>
@@ -244,7 +247,7 @@
                     <div class="b-best__item-hover">
                         <ul>
                             <li>Toothpaste</li>
-                            <li class="wh">R.O.C.S.</li>
+                            <li>R.O.C.S.</li>
                             <li>BIOCOMPLEX</li>
                             <li>Active Protection</li>
                         </ul>
@@ -258,7 +261,7 @@
                     <div class="b-best__item-hover">
                         <ul>
                             <li>Toothpaste</li>
-                            <li class="wh">R.O.C.S.</li>
+                            <li>R.O.C.S.</li>
                             <li>BIOCOMPLEX</li>
                             <li>Active Protection</li>
                         </ul>
@@ -272,7 +275,7 @@
                     <div class="b-best__item-hover">
                         <ul>
                             <li>Toothpaste</li>
-                            <li class="wh">R.O.C.S.</li>
+                            <li>R.O.C.S.</li>
                             <li>BIOCOMPLEX</li>
                             <li>Active Protection</li>
                         </ul>
@@ -286,7 +289,7 @@
                     <div class="b-best__item-hover">
                         <ul>
                             <li>Toothpaste</li>
-                            <li class="wh">R.O.C.S.</li>
+                            <li>R.O.C.S.</li>
                             <li>BIOCOMPLEX</li>
                             <li>Active Protection</li>
                         </ul>
@@ -300,7 +303,7 @@
                     <div class="b-best__item-hover">
                         <ul>
                             <li>Toothpaste</li>
-                            <li class="wh">R.O.C.S.</li>
+                            <li>R.O.C.S.</li>
                             <li>BIOCOMPLEX</li>
                             <li>Active Protection</li>
                         </ul>
@@ -314,7 +317,7 @@
                     <div class="b-best__item-hover">
                         <ul>
                             <li>Toothpaste</li>
-                            <li class="wh">R.O.C.S.</li>
+                            <li>R.O.C.S.</li>
                             <li>BIOCOMPLEX</li>
                             <li>Active Protection</li>
                         </ul>
@@ -328,7 +331,7 @@
                     <div class="b-best__item-hover">
                         <ul>
                             <li>Toothpaste</li>
-                            <li class="wh">R.O.C.S.</li>
+                            <li>R.O.C.S.</li>
                             <li>BIOCOMPLEX</li>
                             <li>Active Protection</li>
                         </ul>
@@ -362,7 +365,7 @@
         <div class="container">
             <div class="b-compound__top">
                 <div class="b-heading">Based on natural<br/>
-                    active ingridients</div>
+                    active ingredients</div>
                 <div class="b-compound__top-arrow">
                     <svg width="307" height="88" viewBox="0 0 307 88" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <defs>
@@ -385,6 +388,7 @@
                                 products</div>
                             <div class="b-compound__item-hover">Our products designed for different age groups given the specifics of various age periods.
                             </div>
+                            <div class="b-compound__item-close"></div>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -393,9 +397,10 @@
                                 <img src="img/svg/cp2.svg" alt="">
                             </div>
                             <div class="b-compound__item-text">Natural<br/>
-                                ingridients</div>
+                                ingredients</div>
                             <div class="b-compound__item-hover">We use mostly natural ingredients that are neutral to human body.
                             </div>
+                            <div class="b-compound__item-close"></div>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -407,6 +412,7 @@
                                 free</div>
                             <div class="b-compound__item-hover">We developed formula without fluoride with the  same effectiveness as fluoride ones. That makes our products safe.
                             </div>
+                            <div class="b-compound__item-close"></div>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -417,6 +423,7 @@
                             <div class="b-compound__item-text">Not tasted<br/> on animals</div>
                             <div class="b-compound__item-hover">We produce cruelty-free products.
                             </div>
+                            <div class="b-compound__item-close"></div>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -427,6 +434,7 @@
                             <div class="b-compound__item-text">For different<br/> age groups</div>
                             <div class="b-compound__item-hover">By developing unique patented formulas we bring the art of innovation to a completely new level. We improve people’s health and quality of life.
                             </div>
+                            <div class="b-compound__item-close"></div>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -437,9 +445,12 @@
                             <div class="b-compound__item-text">Special patented<br/> complex</div>
                             <div class="b-compound__item-hover">We develop unique complexes bearing in mind special needs and different age groups.
                             </div>
+                            <div class="b-compound__item-close"></div>
                         </div>
                     </div>
                 </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
             </div>
         </div>
     </section>
@@ -515,7 +526,7 @@
                 </div>
                 <div class="b-ingridients__right">
                     <div class="b-ingridients__right-top">
-                        <div class="b-heading">Ingridients</div>
+                        <div class="b-heading">Ingredients</div>
                         <a href="" class="b-link">Explore more</a>
                         <div class="b-ingridients__right-arrow">
                             <svg width="191" height="62" viewBox="0 0 191 62" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -535,46 +546,55 @@
                             <p>Protects against bacteria and normalizes
                                 the microflora
                             </p>
+                            <img src="img/svg/ing.svg" alt="">
                         </div>
                         <div class="b-ingridients__right-item js-tab-content" id="ing2">
                             <button class="b-ingridients__right-close"></button>
                             <span>Bromelain</span>
                             <p>Gently removes dental plaque and reduces inflammation</p>
+                            <img src="img/svg/ing2.svg" alt="">
                         </div>
                         <div class="b-ingridients__right-item js-tab-content" id="ing3">
                             <button class="b-ingridients__right-close"></button>
                             <span>Vitamin E</span>
                             <p>Provides antioxidant protection</p>
+                            <img src="img/svg/ing3.svg" alt="">
                         </div>
                         <div class="b-ingridients__right-item js-tab-content" id="ing4">
                             <button class="b-ingridients__right-close"></button>
                             <span>Active minerals</span>
                             <p>Strengthen the enamel, give the teeth back their shine and improve their colo</p>
+                            <img src="img/svg/ing4.svg" alt="">
                         </div>
                         <div class="b-ingridients__right-item js-tab-content" id="ing5">
                             <button class="b-ingridients__right-close"></button>
                             <span>Quince fruit extract</span>
                             <p>Provides mild gum care during teeth eruption period and anti-inflammatory effect</p>
+                            <img src="img/svg/ing5.svg" alt="">
                         </div>
                         <div class="b-ingridients__right-item js-tab-content" id="ing6">
                             <button class="b-ingridients__right-close"></button>
                             <span>Calcium</span>
                             <p>Restores natural shine and increases the enamel's resistance to acid</p>
+                            <img src="img/svg/ing6.svg" alt="">
                         </div>
                         <div class="b-ingridients__right-item js-tab-content" id="ing7">
                             <button class="b-ingridients__right-close"></button>
                             <span>Seaweed alginate</span>
                             <p>Prevents sore, red gums, minimizes discomfort, protects oral mucosa, binds toxins.</p>
+                            <img src="img/svg/ing7.svg" alt="">
                         </div>
                         <div class="b-ingridients__right-item js-tab-content" id="ing8">
                             <button class="b-ingridients__right-close"></button>
                             <span>Lime Blossom</span>
                             <p>Ensures gentle care for teeth while teething, protecting babies gums against sore and red gums</p>
+                            <img src="img/svg/ing8.svg" alt="">
                         </div>
                         <div class="b-ingridients__right-item js-tab-content" id="ing9">
                             <button class="b-ingridients__right-close"></button>
                             <span>Camomile extract</span>
                             <p>Increases gum protection level</p>
+                            <img src="img/svg/ing9.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -683,6 +703,7 @@
                                 Gently removes dental plaque and reduces inflammation
                             </p>
                         </div>
+                        <div class="complex-xs__close"></div>
                     </div>
                     <div class="complex-xs__tab i3">
                         <div class="complex-xs__top complex-m">
@@ -697,6 +718,7 @@
                                 the microflora composition
                             </p>
                         </div>
+                        <div class="complex-xs__close"></div>
                     </div>
                     <div class="complex-xs__tab i1">
                         <div class="complex-xs__top complex-m">
@@ -711,6 +733,7 @@
                                 give the teeth back their shine and improve their color
                             </p>
                         </div>
+                        <div class="complex-xs__close"></div>
                     </div>
                 </div>
 
@@ -783,7 +806,7 @@
                 <div class="b-about__row-item">
                     <div class="b-about__row-img"><img src="img/about-2.webp" alt=""></div>
                     <div class="b-about__row-text">
-                        <span>Natural ingridients</span>
+                        <span>Natural ingredients</span>
                     </div>
                     <div class="b-about__row-hover">
                         <p>In our products, we use natural ingredients which are an ideal, well thought-out combination and are proved to be effective in the prevention of cavities and gum disease.</p>
@@ -808,7 +831,10 @@
                     <div class="b-reviews__item">
                         <a href="" class="b-reviews__item-img"><img src="img/reviews-img.webp" alt=""></a>
                         <div class="b-reviews__item-wrap">
-                            <p>I like it and use regularly. I like the fact that it does not have aggressive chemicals in it. Good product that I enjoy.</p>
+                            <p>I like it and use regularly. I like the fact that it does not have aggressive chemicals in it. Good product that I enjoy. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad alias dolorum ipsa nobis non perspiciatis quas quia quisquam ut voluptatibus? A dolores illum iste labore provident quam quis, recusandae sit.</p>
+                            <div class="b-reviews__item-bottom">
+                                <button class="b-link">Show all</button>
+                            </div>
                             <div class="b-reviews__item-stars">
                                 <span></span>
                                 <span></span>
@@ -858,13 +884,22 @@
             <div class="b-heading">Where to buy</div>
             <div class="b-buy__row">
                 <a href="" class="b-buy__row-item">
-                    <img src="img/b1.webp" alt="">
+                    <span class="b-buy__row-wrap">
+                        <img src="img/b1.webp" alt="">
+                        <span class="b-buy__row-country"><img src="img/germany.webp" alt=""></span>
+                    </span>
                 </a>
                 <a href="" class="b-buy__row-item">
-                    <img src="img/b2.webp" alt="">
+                    <span class="b-buy__row-wrap">
+                        <img src="img/b2.webp" alt="">
+                        <span class="b-buy__row-country"><img src="img/spain.webp" alt=""></span>
+                    </span>
                 </a>
                 <a href="" class="b-buy__row-item">
-                    <img src="img/b3.webp" alt="">
+                    <span class="b-buy__row-wrap">
+                        <img src="img/b3.webp" alt="">
+                        <span class="b-buy__row-country"><img src="img/italy.webp" alt=""></span>
+                    </span>
                 </a>
             </div>
         </div>
@@ -897,7 +932,7 @@
                 <div class="b-footer__left-nav nav-xs">
                     <ul class="nav-xs">
                         <li><a href="#promo">Home</a></li>
-                        <li><a href="#ingridients">Ingridients</a></li>
+                        <li><a href="#ingridients">Ingredients</a></li>
                         <li><a href="#buy">Where to buy</a></li>
                         <li><a href="#about">About us</a></li>
                         <li><a href="#footer">Contacts</a></li>
