--- a/index.html
+++ b/index.html
@@ -882,23 +882,49 @@
     <section class="b-buy" id="buy">
         <div class="container">
             <div class="b-heading">Where to buy</div>
-            <div class="b-buy__row">
-                <a href="" class="b-buy__row-item">
+            <div class="b-buy__row buy-slider swiper-container">
+                <div class="swiper-wrapper">
+                    <a href="" class="b-buy__row-item swiper-slide">
                     <span class="b-buy__row-wrap">
                         <img src="img/b1.webp" alt="">
                         <span class="b-buy__row-country"><img src="img/germany.webp" alt=""></span>
                     </span>
-                </a>
+                    </a>
+                    <a href="" class="b-buy__row-item swiper-slide">
+                    <span class="b-buy__row-wrap">
+                        <img src="img/b1.webp" alt="">
+                        <span class="b-buy__row-country"><img src="img/spain.webp" alt=""></span>
+                    </span>
+                    </a>
+                    <a href="" class="b-buy__row-item swiper-slide">
+                    <span class="b-buy__row-wrap">
+                        <img src="img/b1.webp" alt="">
+                        <span class="b-buy__row-country"><img src="img/italy.webp" alt=""></span>
+                    </span>
+                    </a>
+                    <a href="" class="b-buy__row-item swiper-slide">
+                    <span class="b-buy__row-wrap">
+                        <img src="img/b1.webp" alt="">
+                        <span class="b-buy__row-country"><img src="img/ur-br.webp" alt=""></span>
+                    </span>
+                    </a>
+                    <a href="" class="b-buy__row-item swiper-slide">
+                    <span class="b-buy__row-wrap">
+                        <img src="img/b1.webp" alt="">
+                        <span class="b-buy__row-country"><img src="img/france.webp" alt=""></span>
+                    </span>
+                    </a>
+                </div>
+            </div>
+            <div class="b-buy__row b-buy__row_two">
                 <a href="" class="b-buy__row-item">
                     <span class="b-buy__row-wrap">
                         <img src="img/b2.webp" alt="">
-                        <span class="b-buy__row-country"><img src="img/spain.webp" alt=""></span>
                     </span>
                 </a>
                 <a href="" class="b-buy__row-item">
                     <span class="b-buy__row-wrap">
                         <img src="img/b3.webp" alt="">
-                        <span class="b-buy__row-country"><img src="img/italy.webp" alt=""></span>
                     </span>
                 </a>
             </div>
